2005-01-15  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkentrycompletion.xml (get_text_column): Remove unimplemented
	method.
	(insert-prefix): Add description of PyGTK2.6 method.

2005-01-13  John Finlay  <finlay@moeraki.com>

	* pygtk-gtklabel.xml (get_angle, set_angle, set_max_width_chars)
	(get_max_width_chars): Add descriptions of these PyGTK 2.6 methods.
	("angle", "max-width-chars"): Add descriptions.

	* pygtk-gtk-functions.xml (gtk.get_current_event)
	(gtk.get_current_event_state): Add descriptions of these PyGTK2.6
	functions.

	* pygtk-gdkpixmap.xml
	* pygtk-gdk-functions.xml (gtk.pixmap_colormap_create_from_xpm)
	(gtk.pixmap_colormap_create_from_xpm_d)
	(gtk.pixmap_colormap_from_xpm_d):
	First arg can be a GdkDrawable.

	* pygtk-gtkcontainer.xml (gtk.container_class_install_child_property):
	Add description of this PyGTK2.4 function. Update Description.

	* pygtk-gtk-functions.xml (gtk.container_class_install_child_property):
	Add link to.

	* pygtk-gtkwidget.xml ("child-notify", "client-event")
	("proximity-in-event", "proximity-out-event") Add descriptions.
	Patch by Gian Mario Tagliaretti.

2004-12-27  John Finlay  <finlay@moeraki.com>

	* pygtk-gdk-constants.xml (event type constants): Fix Typo (Gian Mario
	Tagliaretti)

2004-12-26  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkevent.xml (Attributes): CLIENT_EVENT message_type is
	writeable.

2004-12-24  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml: Bump version number and pubdate.

	* pygtk-gtkuimanager.xml ("post-activate", "pre-activate"): Add
	action param description.

	======== 2.5.1 ============
2004-12-23  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml Update pubdate and revhistory.

	* pygtk-gdkpixbuf.xml (render_to_drawable, render_to_drawable_alpha): 
	Add deprecation warning.

	* pygtk-gtkcellview.xml (set_value, set_values, set_cell_data_func):
	Remove descriptions of removed methods.

2004-12-21  John Finlay  <finlay@moeraki.com>
