@@ -1,0 +1,11 @@
+<?xml version="1.0" standalone="no"?>
+<!DOCTYPE chapter PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+    "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
+<chapter id="glade-class-reference" xmlns:xi="http://www.w3.org/2001/XInclude">
+  <title>The gtk.glade Class Reference</title>
+
+<!-- GLADE CLASSES -->
+
+  <xi:include href="pygtk-gladexml.xml"/>
+
+</chapter>
