@@ -4,7 +4,7 @@
 ]>
 <book id="pygtk-reference" xmlns:xi="http://www.w3.org/2001/XInclude">
   <bookinfo>
-    <pubdate>December 24, 2004</pubdate>
+    <pubdate>January 17, 2005</pubdate>
     <title>PyGTK 2.0 Reference Manual</title>
     <edition>PyGTK Reference Manual version 2.5.2 for PyGTK 2.5.x</edition>
     <releaseinfo>Version 2.5.2</releaseinfo>
@@ -126,10 +126,10 @@ module.</para>
   <xi:include href="pygtk-gobject-classes.xml"/>
   <xi:include href="pygtk-gtk-classes.xml"/>
   <xi:include href="pygtk-gdk-classes.xml"/>
+  <xi:include href="pygtk-glade-classes.xml"/>
   <xi:include href="pygtk-pango-classes.xml"/>
 <!--
   <xi:include href="pygtk-atk-classes.xml"/>
-  <xi:include href="pygtk-gladexml-classes.xml"/>
 -->
 
 <appendix id="pygtk-ref-changelog">
