@@ -1,3 +1,12 @@
+2005-01-18  John Finlay  <finlay@moeraki.com>
+
+	* pygtk2-ref-xml: Add pygtk-glade-classes.xml. Change date.
+
+	* pygtk-glade-classes.xml
+	* pygtk-gladexml.xml: Add these files created by Johan Dahlin.
+
+	* pygtk-gladexml-classes.xml: Remove.
+
 2005-01-15  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkentrycompletion.xml (get_text_column): Remove unimplemented
